manifests/media/jellyseerr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyseerr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyseerr
  template:
    metadata:
      labels:
        app: jellyseerr
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: jellyseerr
          image: fallenbagel/jellyseerr:latest@sha256:4538137bc5af902dece165f2bf73776d9cf4eafb6dd714670724af8f3eb77764
          ports:
            - containerPort: 5055
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
          volumeMounts:
            - name: config
              mountPath: /app/config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: jellyseerr-config
---
apiVersion: v1
kind: Service
metadata:
  name: jellyseerr
  namespace: media
  annotations:
    metallb.universe.tf/loadBalancerIPs: "10.0.2.23"
spec:
  type: LoadBalancer
  selector:
    app: jellyseerr
  ports:
    - name: http
      port: 5055
      targetPort: 5055
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyseerr-ingress
  namespace: media
spec:
  ingressClassName: nginx
  rules:
  - host: jellyseerr.cluster.nelsondane.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: jellyseerr
            port:
              number: 5055
